# zayd-thai-islamic-knowledge-assistant

./: .dockerignore  .editorconfig  .env.example  .env.pilot.example  .env.self-host.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_PROVENANCE.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFEST.sha256  Makefile  NOTICE  PROJECT_STRUCTURE.txt  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  TRADEMARK.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  tasks-update.md  tsconfig.base.json
services/api/: Dockerfile  README.md  pyproject.toml
services/api/src/zayd_service_api/: __init__.py  app.py
services/api/tests/: test_answer_invalidation_api.py  test_api_imports.py  test_audit_api.py  test_auth_api.py  test_citations_api.py  test_comparison_api.py  test_conversation_history_api.py  test_document_review_api.py  test_documents_api.py  test_feedback_api.py  test_feedback_review_api.py  test_guest_api.py  test_health_dependencies.py  test_incident_api.py  test_incident_regressions_api.py  test_licenses_api.py  test_logging_api.py  test_metrics_api.py  test_mfa_api.py  test_penetration.py  test_pilot_access_api.py  test_preferences_api.py  test_prompt_api.py  test_rbac_api.py  test_review_queue_api.py  test_saved_answers_api.py  test_security_hardening.py  test_sources_api.py  test_streaming_chat_api.py
services/common/: README.md  pyproject.toml
services/common/src/zayd_common/: __init__.py  answer_invalidation.py  audit.py  auth.py  chunking.py  conversations.py  document_lifecycle.py  document_publishing.py  document_review.py  documents.py  embeddings.py  enums.py  exceptions.py  feedback.py  feedback_review.py  guest.py  health.py  incident_management.py  license_policy.py  licenses.py  logging.py  malware_scanning.py  metadata_extraction.py  mfa.py  normalization.py  parsing.py  prompt_registry.py  provider_admin.py  rbac.py  retrievability.py  review_queue.py  review_tasks.py  saved_answers.py  scholar_approval.py  security.py  settings.py  sources.py  state_machines.py  storage.py  telemetry.py  (+2 more)
services/common/tests/: test_answer_invalidation.py  test_audit.py  test_auth.py  test_chunking.py  test_conversations.py  test_database.py  test_database_postgres.py  test_document_lifecycle.py  test_document_publishing.py  test_document_review.py  test_documents.py  test_embeddings.py  test_enums.py  test_feedback.py  test_feedback_review.py  test_guest.py  test_health.py  test_incident_management.py  test_license_policy.py  test_licenses.py  test_logging.py  test_metadata_extraction.py  test_mfa.py  test_normalization.py  test_parsing.py  test_prompt_registry.py  test_provider_admin.py  test_rbac.py  test_retrievability.py  test_review_queue.py  test_review_tasks.py  test_reviewer_dashboard.py  test_saved_answers.py  test_scholar_approval.py  test_seeding.py  test_settings.py  test_settings_embeddings.py  test_sources.py  test_state_machines.py  test_state_machines_concurrency.py  (+4 more)
services/orchestrator/: README.md  pyproject.toml
services/orchestrator/src/zayd_service_orchestrator/: __init__.py  provider_sdk.py  (+10 more)
services/orchestrator/tests/: test_answer_orchestration.py  test_chat_streaming.py  test_citation_detail.py  test_citation_registry.py  test_citation_verification.py  test_local_llm_adapters.py  test_openai_llm_adapter.py  test_orchestrator_imports.py  test_prompt_orchestration.py  test_provider_sdk.py  test_question_classification.py  test_risk_policy_engine.py
(+469 files in other folders)
