[project]
name = "zayd-service-api"
version = "0.0.0"
requires-python = "==3.12.3"
dependencies = [
  "fastapi==0.139.0",
  "uvicorn==0.35.0",
  "zayd-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zayd_service_api"]
