[project]
name = "zayd-service-orchestrator"
version = "0.0.0"
requires-python = "==3.12.3"
dependencies = [
  "zayd-common",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zayd_service_orchestrator"]
